<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="profile"
        android:title="@string/profile" />

    <PreferenceCategory
        android:key="cat_server"
        android:title="@string/server">

        <EditTextPreference
            android:key="server_ip"
            android:title="@string/server_ip"
            android:singleLine="true" />

        <EditTextPreference
            android:key="server_port"
            android:title="@string/server_port"
            android:inputType="number"
            android:singleLine="true" />

        <CheckBoxPreference
            android:key="auth_userpw"
            android:title="@string/auth_userpw"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="auth_username"
            android:title="@string/auth_username"
            android:dependency="auth_userpw"
            android:singleLine="true" />

        <EditTextPreference
            android:key="auth_password"
            android:title="@string/auth_password"
            android:inputType="textPassword"
            android:dependency="auth_userpw"
            android:singleLine="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_startup"
        android:title="@string/startup">

        <CheckBoxPreference
            android:key="adv_auto_connect"
            android:title="@string/adv_auto_connect"
            android:summary="@string/adv_auto_connect_sum" />

        <Preference
            android:key="always_on_vpn"
            android:title="@string/always_on_vpn"
            android:summary="@string/always_on_vpn_sum" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_advanced"
        android:title="@string/advanced">

        <Preference
            android:key="adv_toggle"
            android:title="@string/adv_toggle"
            android:summary="@string/adv_toggle_sum" />

        <ListPreference
            android:key="adv_route"
            android:title="@string/adv_route"
            android:entries="@array/adv_routes"
            android:entryValues="@array/adv_routes_values" />

        <EditTextPreference
            android:key="adv_dns"
            android:title="@string/adv_dns"
            android:singleLine="true" />

        <EditTextPreference
            android:key="adv_dns_port"
            android:title="@string/adv_dns_port"
            android:inputType="number"
            android:singleLine="true" />

        <CheckBoxPreference
            android:key="ipv6_proxy"
            android:title="@string/ipv6_proxy"
            android:summary="@string/ipv6_proxy_sum" />

        <CheckBoxPreference
            android:key="udp_proxy"
            android:title="@string/udp_proxy"
            android:summary="@string/udp_proxy_sum" />

        <EditTextPreference
            android:key="udp_gw"
            android:title="@string/udp_gw"
            android:singleLine="true"
            android:dependency="udp_proxy" />

        <CheckBoxPreference
            android:key="adv_per_app"
            android:title="@string/adv_per_app" />

        <CheckBoxPreference
            android:key="adv_app_bypass"
            android:title="@string/adv_app_bypass"
            android:summary="@string/adv_app_bypass_sum"
            android:dependency="adv_per_app" />

        <EditTextPreference
            android:key="adv_app_list"
            android:title="@string/adv_app_list"
            android:summary="@string/adv_app_list_sum"
            android:dependency="adv_per_app" />

    </PreferenceCategory>

</PreferenceScreen>
